--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "3Dicons",
+  "name": "3dicons",
   "private": true,
-  "description": "beautiful open source 3D Icons",
+  "description": "1440+ beautifully crafted open-source 3D icons",
   "version": "0.1.0",
   "author": "vijay verma <hello@vijayverma.co>",
   "bugs": {
@@ -44,7 +44,7 @@
     "gh-pages": "^3.2.3",
     "prettier": "2.2.1"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://3dicons.co",
   "keywords": [
     "gatsby"
   ],
