--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-feed": "^3.15.0",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
     "gatsby-plugin-google-analytics": "^3.15.0",
+    "gatsby-plugin-google-gtag": "^5.11.0",
     "gatsby-plugin-image": "^1.15.0",
     "gatsby-plugin-load-script": "^1.1.0",
     "gatsby-plugin-manifest": "^3.15.0",
